--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -31,7 +31,8 @@ parts:
     - file: tutorials/index
       sections:
         - file: tutorials/example/tutorial-notebook
-        - file: tutorials/example/Machine-Learning
+        - file: tutorials/example/Machine_Learning_Tutorial
+          title: Introduction to Machine Learning
         - file: tutorials/git_and_jupyterlab/index
           title: Git, GitHub, and JupyterLab
           sections:
